portfolio and few lecture files added

--- a/simpleCascadingInHtmlDirectly.html
+++ b/simpleCascadingInHtmlDirectly.html
@@ -8,6 +8,9 @@
     <!--THIS IS A SIMPLE COMMENT TAG-->
     <p><a href="otherTags.html">This text</a> will take u to otherTags.html page which is created in same folder.
     This is done by using the anchor tag.</p>
+    <p><a href="otherTags.html">This text</a> will redirect to new page on same tab</p>
+    <p><a href="otherTags.html" target="_blank">This text</a> will redirect to new page on different tab</p>
+    <p><a href="otherTags.html" target="_">This text</a> will redirect to new page on altogether different window</p>
 
 </body>
 </html>
