--- a/simpleCascadingInHtmlDirectly.html
+++ b/simpleCascadingInHtmlDirectly.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Cascadings</title>
-</head>
-<body style="background-color: violet;">
-    <p>Here we have used the style="background-color: violet;" as the syntax in body <!--Not displayed even when kept between texts-->text.</p>
-    <!--THIS IS A SIMPLE COMMENT TAG-->
-    <p><a href="otherTags.html">This text</a> will take u to otherTags.html page which is created in same folder.
-    This is done by using the anchor tag.</p>
-    <p><a href="otherTags.html">This text</a> will redirect to new page on same tab</p>
-    <p><a href="otherTags.html" target="_blank">This text</a> will redirect to new page on different tab</p>
-    <p><a href="otherTags.html" target="_">This text</a> will redirect to new page on altogether different window</p>
-
-</body>
+    <head>
+        <title>Cascadings</title>
+    </head>
+    <body style="background-color: violet">
+        <p>
+            Here we have used the style="background-color: violet;" as the
+            syntax in body
+            <!--Not displayed even when kept between texts-->text.
+        </p>
+        <!--THIS IS A SIMPLE COMMENT TAG-->
+        <p>
+            <a href="otherTags.html">This text</a> will take u to otherTags.html
+            page which is created in same folder. This is done by using the
+            anchor tag.
+        </p>
+        <p>
+            <a href="otherTags.html">This text</a> will redirect to new page on
+            same tab
+        </p>
+        <p>
+            <a href="otherTags.html" target="_blank">This text</a> will redirect
+            to new page on different tab
+        </p>
+    </body>
 </html>
