--- a/workingWithMoreListTags.html
+++ b/workingWithMoreListTags.html
@@ -9,13 +9,13 @@
         <h2>Description List (dl)</h2>
         <dl>
             <dt>Term 1</dt>
-            <dd>Definition 1</dd>
+            <dd>- Definition 1</dd>
 
             <dt>Term 2</dt>
-            <dd>Definition 2</dd>
+            <dd>- Definition 2</dd>
 
             <dt>Term 3</dt>
-            <dd>Definition 3</dd>
+            <dd>- Definition 3</dd>
         </dl>
     </body>
 </html>
