small example added

--- a/workingWithMoreListTags.html
+++ b/workingWithMoreListTags.html
@@ -11,8 +11,15 @@
             <dt>Term 1</dt>
             <dd>- Definition 1</dd>
 
-            <dt>Term 2</dt>
-            <dd>- Definition 2</dd>
+            <dt>Coffee</dt>
+            <dd>- Is a caffine based drink which has the following types:
+                <ol type="1">
+                    <li>Cappuccino</li>
+                    <li>Espresso</li>
+                    <li>Americano</li>
+                    <li>black coffee</li>
+                    
+            </dd>
 
             <dt>Term 3</dt>
             <dd>- Definition 3</dd>
