--- a/workingWithMoreListTags.html
+++ b/workingWithMoreListTags.html
@@ -8,17 +8,26 @@
     <body>
         <h2>Description List (dl)</h2>
         <dl>
-            <dt>Term 1</dt>
-            <dd>- Definition 1</dd>
-
-            <dt>Coffee</dt>
-            <dd>- Is a caffine based drink which has the following types:
+            <dt>Tea</dt>
+            <dd>
+                - The procedure to prepare tea is:
                 <ol type="1">
                     <li>Cappuccino</li>
                     <li>Espresso</li>
                     <li>Americano</li>
                     <li>black coffee</li>
-                    
+                </ol>
+            </dd>
+
+            <dt>Coffee</dt>
+            <dd>
+                - Is a caffine based drink which has the following types:
+                <ol type="1">
+                    <li>Cappuccino</li>
+                    <li>Espresso</li>
+                    <li>Americano</li>
+                    <li>black coffee</li>
+                </ol>
             </dd>
 
             <dt>Term 3</dt>
