small example added

--- a/workingWithMoreListTags.html
+++ b/workingWithMoreListTags.html
@@ -12,10 +12,12 @@
             <dd>
                 - The procedure to prepare tea is:
                 <ol type="1">
-                    <li>Cappuccino</li>
-                    <li>Espresso</li>
-                    <li>Americano</li>
-                    <li>black coffee</li>
+                    <li>Take a utensil</li>
+                    <li>turn the gas on</li>
+                    <li>add water</li>
+                    <li>add tea leaves</li>
+                    <li>add milk</li>
+                    <li>let it boil well</li>
                 </ol>
             </dd>
 
