Further tags added and row and column merging shown

--- a/usingtableinhtml.html
+++ b/usingtableinhtml.html
@@ -9,13 +9,6 @@
         <h2>Sample Table</h2>
 
         <table border="1" cellspacing="0" cellpadding="8">
-            <thead>
-                <tr>
-                    <th>Header 1</th>
-                    <th>Header 2</th>
-                    <th>Header 3</th>
-                </tr>
-            </thead>
             <tbody>
                 <tr>
                     <td>Row 1, Cell 1</td>
@@ -31,6 +24,53 @@
                     <td>Row 3, Cell 1</td>
                     <td>Row 3, Cell 2</td>
                     <td>Row 3, Cell 3</td>
+                </tr>
+            </tbody>
+            <thead>
+                <tr>
+                    <th>Header 1</th>
+                    <th>Header 2</th>
+                    <th>Header 3</th>
+                </tr>
+            </thead>
+        </table>
+        <br />
+        <h1>Example with filled data:</h1>
+
+        <table border="1" cellspacing="0" cellpadding="8">
+            <thead>
+                <tr>
+                    <th colspan="4">Education Details</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Sr no.</th>
+                    <th>University/Board</th>
+                    <th>Year of Passing</th>
+                    <th>%age</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>SSC</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>HSC</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td rowspan="2">3</td>
+                    <td rowspan="2">ISU</td>
+                    <td>sem1</td>
+                    <td>10</td>
+                </tr>
+                <tr>
+                    <td>sem2</td>
+                    <td>30</td>
                 </tr>
             </tbody>
         </table>
