--- a/myportfolio/portfolio.html
+++ b/myportfolio/portfolio.html
@@ -7,8 +7,14 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <header>
-            <img src="images/nameLogo.png" alt="" align="left" />
+        <header style="background-color: #151515; color: white">
+            <img
+                src="images/nameLogo.png"
+                alt=""
+                align="left"
+                width="50"
+                height="100"
+            />
             <h1>RK</h1>
             <!-- <h3>Web Developer</h3> -->
         </header>
