portfolio edited and 29th January's lab question solved

--- a/myportfolio/portfolio.html
+++ b/myportfolio/portfolio.html
@@ -170,7 +170,7 @@
                 Feel free to reach out!<br> You can contact me at
                 <a href="mailto:2023.raheelk@isu.ac.in"
                     >2023.raheelk@isu.ac.in</a
-                >
+                > or on <a href="tel:+919324856990">9324856990</a>
             </p>
 
             <div class="links">
