updated after width

--- a/playingWithTables.html
+++ b/playingWithTables.html
@@ -13,7 +13,7 @@
 
             th,
             td {
-                padding: 50px;
+                padding: 0px;
             }
 
             th {
@@ -49,9 +49,9 @@
                 </tr>
             </tbody>
         </table>
-
-        <table style="border-spacing: 10px">
-            <thead>
+        <br />
+        <table style="border-spacing: 10px; width: 50%">
+            <thead style="text-align: centre">
                 <tr>
                     <th>H1</th>
                     <th>H2</th>
@@ -60,19 +60,19 @@
             </thead>
             <tbody>
                 <tr style="text-align: left">
-                    <td>Row 1, Cell 1</td>
-                    <td>Row 1, Cell 2</td>
-                    <td>Row 1, Cell 3</td>
+                    <td>R1, C1</td>
+                    <td>R1, C2</td>
+                    <td>R1, C3</td>
                 </tr>
                 <tr style="text-align: right">
-                    <td>Row 2, Cell 1</td>
-                    <td>Row 2, Cell 2</td>
-                    <td>Row 2, Cell 3</td>
+                    <td>R2, C1</td>
+                    <td>R2, C2</td>
+                    <td>R2, C3</td>
                 </tr>
                 <tr>
-                    <td>Row 3, Cell 1</td>
-                    <td>Row 3, Cell 2</td>
-                    <td>Row 3, Cell 3</td>
+                    <td>R3, C1</td>
+                    <td>R3, C2</td>
+                    <td>R3, C3</td>
                 </tr>
             </tbody>
         </table>
