caption of a table added

--- a/playingWithTables.html
+++ b/playingWithTables.html
@@ -51,6 +51,9 @@
         </table>
         <br />
         <table style="border-spacing: 10px; width: 50%">
+            <caption>
+                New Table
+            </caption>
             <thead style="text-align: centre">
                 <tr>
                     <th>H1</th>
