--- a/myportfolio/portfolio.html
+++ b/myportfolio/portfolio.html
@@ -1,206 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio Page</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <header style="background-color: #151515">
-            <img
-                src="images/nameLogo.png"
-                alt=""
-                align="left"
-                width="50"
-                height="100"
-            />
-            <h1>RK</h1>
-        </header>
 
-        <nav>
-            <ul>
-                <div class="link">
-                    <li><a href="#about">About Me</a></li>
-                </div>
-                <div class="link">
-                    <li><a href="#projects">Projects</a></li>
-                </div>
-                <!-- <div class="link">
-                     <li><a href="#certificates">Certifications</a></li>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio Page</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <header style="background-color: #151515">
+        <img src="images/nameLogo.png" alt="" align="left" width="50" height="100" />
+        <h1>RK</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <div class="link">
+                <li><a href="#about">About Me</a></li>
+            </div>
+            <div class="link">
+                <li><a href="#projects">Projects</a></li>
+            </div>
+            <!-- <div class="link">
+                    <li><a href="#certificates">Certifications</a></li>
                 </div> -->
-                <div class="link">
-                    <li><a href="#Contact">Contact Me</a></li>
-                </div>
-            </ul>
-        </nav>
+            <div class="link">
+                <li><a href="#Contact">Contact Me</a></li>
+            </div>
+        </ul>
+    </nav>
 
-        <h1>About Me</h1>
-        <section
-            id="about"
-            style="display: flex; justify-content: space-between"
-        >
-            <div class="information">
-                <div class="heading">
-                    <h2><u>Name:</u> Raheel Kotwal</h2>
-                    <h2>1<sup>st</sup> Year B.Tech CSE Student</h2>
-                </div>
-                <div class="education">
-                    <h2>My Education</h2>
-                    <ul>
-                        <li>Rassaz International School,10<sup>th</sup> ICSE; Mumbai</li>
-                        <li>Rahul International School, 12<sup>th</sup> IGCSE; Mumbai</li>
-                        <li>ITM Skills University (ISU x LU), B.Tech CSE; Kharghar</li>
-                    </ul>
-                </div>
-                <div class="education">
-                    <h2>My Experience</h2>
-                    <ul>
-                        <li>Marketing Intern at LetsUpgrade, from Dec 2023 - Present</li>
-                    </ul>
-                    <h2>Interests: </h2>
-                    <ul>
-                        <li>UI desiging</li>
-                        <li>Learning new programming languages</li>
-                        <li>Active Digital Marketing skills and tools</li>
-                </div>
-            </div>
-            <!-- Add the image below -->
-            <img
-                src="images/mypic1-modified-removebg-preview.png"
-                alt="Raheel's picture"
-                width="300"
-                height="300"
-                align="right"
-            />
-        </section>
 
-        <h1>My Tounges</h1>
-        <section id="skills">
-            <div class="container">
-                <div class="image">
-                    <img
-                        src="images/whitejava.jpeg"
-                        alt="java logo"
-                        width="80px"
-                        height="100px"
-                    />
-                    <p>Java</p>
-                </div>
-                <div class="image">
-                    <img
-                        src="images/whitepython.png"
-                        alt="Python logo"
-                        width="80px"
-                        height="100px"
-                    />
-                    <p>Python</p>
-                </div>
-                <div class="image">
-                    <img
-                        src="images/html5Logo1.png"
-                        alt="Html logo"
-                        width="80px"
-                        height="100px"
-                    />
-                    <p>HTML5</p>
-                </div>
-                <div class="image">
-                    <img
-                        src="images/cssCheckLogo.jpeg"
-                        alt="Css logo"
-                        width="80px"
-                        height="100px"
-                    />
-                    <p>CSS3</p>
-                </div>
-                <div class="image">
-                    <img
-                        src="images/CPP2logo.png"
-                        alt="c++ icon"
-                        width="80px"
-                        height="100px"
-                    />
-                    <p>C++</p>
-                </div>
-                <div class="image"></div>
-            </div>
-        </section>
+    <section id="startPage" style="display: flex; justify-content: space-between">
+        <div class="start">
+            <div class="heading1">
 
-        <h1>Projects</h1>
-        <section id="projects">
-            <!-- Showcase projects with brief descriptions -->
-            <div class="project">
-                <h3>Project 1</h3>
-                <p>Description of Project 1</p>
-            </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>Description of Project 2</p>
-            </div>
-            <div class="project">
-                <h3>Project 3</h3>
-                <p>Description of Project 2.</p>
-            </div>
-            <div class="project">
-                <h3>Project 4</h3>
-                <p>Description of Project 2.</p>
-            </div>
-            <!-- Add more projects as needed -->
-        </section>
+                <h2 style="font-size: 80px; margin-bottom: 0px"><u>Por</u><span style="color:#999999; text-decoration: underline; text-decoration-color:#999999">t  </span></h2>
+                <h2 style="font-size: 80px; margin-top: 0px">        <span style="color:#999999">F</span>olio</h2>
 
-        <h1>My Certifications</h1>
-        <section id="certification">
-            <div class="certifications">
-                <h2>Below are my certifications:</h2>
+
+            </div>
+
+        </div>
+        </div>
+        <!-- Add the image below -->
+        <div class="myImg">
+            <img src="images/mypic1-modified-removebg-preview.png" alt="Raheel's picture" width="300" height="300"
+                align="right" />
+            <h2 style="text-align: center;">Raheel Kotwal</h2>
+        </div>
+    </section>
+
+    <h1>About Me</h1>
+    <section id="about" style="display: flex; justify-content: space-between">
+        <div class="information">
+            <div class="heading">
+
+                <h2>1<sup>st</sup> Year B.Tech CSE Student</h2>
+            </div>
+            <div class="education">
+                <h2>My Education</h2>
                 <ul>
-                    <li><a href="https://www.freecodecamp.org/certification/RaheelS/responsive-web-design">Responsive Web Design</a></li>
-                    <li><a href="https://www.freecodecamp.org/certification/RaheelS/scientific-computing-with-python-v7">Scientific Computing with Python</a></li>
+                    <li>Rassaz International School,10<sup>th</sup> ICSE; Mumbai</li>
+                    <li>Rahul International School, 12<sup>th</sup> IGCSE; Mumbai</li>
+                    <li>ITM Skills University (ISU x LU), B.Tech CSE; Kharghar</li>
                 </ul>
             </div>
-        </section>
-
-
-
-        
-
-        <footer>
-            <h1>Contact Me</h1>
-            <section id="Contact"></section>
-            <p>
-                Feel free to reach out!<br> You can contact me at
-                <a href="mailto:2023.raheelk@isu.ac.in"
-                    >2023.raheelk@isu.ac.in</a
-                > or on <a href="tel:+919324856990">9324856990</a>
-            </p>
-
-            <div class="links">
-                <div class="link">
-                    <img
-                        src="images/whiteGithubLogo.png"
-                        alt="Github logo"
-                        width="30px"
-                        height="20px"
-                        align="left"
-                    />
-                    <p>
-                        <a href="https://github.com/Raheel-10k"
-                            >Github</a
-                        >
-                    </p>
-                    <img
-                        src="images/whitelinkedInLogo.png"
-                        alt="LinkedIn logo"
-                        width="20px"
-                        height="20px"
-                        align="left"
-                    />
-                    <p>
-                        <a href="https://www.linkedin.com/in/raheel-kotwal-02b594291/"
-                            >LinkedIn</a
-                        >
-                    </p>
-                </div>
+            <div class="education">
+                <h2>My Experience</h2>
+                <ul>
+                    <li>Marketing Intern at LetsUpgrade, from Dec 2023 - Present</li>
+                </ul>
+                <h2>Interests: </h2>
+                <ul>
+                    <li>UI desiging</li>
+                    <li>Learning new programming languages</li>
+                    <li>Active Digital Marketing skills and tools</li>
             </div>
-        </footer>
-    </body>
+        </div>
+    </section>
+
+    <h1>My Tounges</h1>
+    <section id="skills">
+        <div class="container">
+            <div class="image">
+                <img src="images/whitejava.jpeg" alt="java logo" width="80px" height="100px" />
+                <p>Java</p>
+            </div>
+            <div class="image">
+                <img src="images/whitepython.png" alt="Python logo" width="80px" height="100px" />
+                <p>Python</p>
+            </div>
+            <div class="image">
+                <img src="images/html5Logo1.png" alt="Html logo" width="80px" height="100px" />
+                <p>HTML5</p>
+            </div>
+            <div class="image">
+                <img src="images/cssCheckLogo.jpeg" alt="Css logo" width="80px" height="100px" />
+                <p>CSS3</p>
+            </div>
+            <div class="image">
+                <img src="images/CPP2logo.png" alt="c++ icon" width="80px" height="100px" />
+                <p>C++</p>
+            </div>
+            <div class="image"></div>
+        </div>
+    </section>
+
+    <h1>Projects</h1>
+    <section id="projects">
+        <!-- Showcase projects with brief descriptions -->
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>Description of Project 1</p>
+        </div>
+        <div class="project">
+            <h3>Project 2</h3>
+            <p>Description of Project 2</p>
+        </div>
+        <div class="project">
+            <h3>Project 3</h3>
+            <p>Description of Project 2.</p>
+        </div>
+        <div class="project">
+            <h3>Project 4</h3>
+            <p>Description of Project 2.</p>
+        </div>
+        <!-- Add more projects as needed -->
+    </section>
+
+    <h1>My Certifications</h1>
+    <section id="certification">
+        <div class="certifications">
+            <h2>Below are my certifications:</h2>
+            <ul>
+                <li><a href="https://www.freecodecamp.org/certification/RaheelS/responsive-web-design">Responsive Web
+                        Design</a></li>
+                <li><a href="https://www.freecodecamp.org/certification/RaheelS/scientific-computing-with-python-v7">Scientific
+                        Computing with Python</a></li>
+            </ul>
+        </div>
+    </section>
+
+
+
+
+
+    <footer>
+        <h1>Contact Me</h1>
+        <section id="Contact"></section>
+        <p>
+            Feel free to reach out!<br> You can contact me at
+            <a href="mailto:2023.raheelk@isu.ac.in">2023.raheelk@isu.ac.in</a> or on <a
+                href="tel:+919324856990">9324856990</a>
+        </p>
+
+        <div class="links">
+            <div class="link">
+                <img src="images/whiteGithubLogo.png" alt="Github logo" width="30px" height="20px" align="left" />
+                <p>
+                    <a href="https://github.com/Raheel-10k">Github</a>
+                </p>
+                <img src="images/whitelinkedInLogo.png" alt="LinkedIn logo" width="20px" height="20px" align="left" />
+                <p>
+                    <a href="https://www.linkedin.com/in/raheel-kotwal-02b594291/">LinkedIn</a>
+                </p>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
