--- a/lab/addingtwoImages.html
+++ b/lab/addingtwoImages.html
@@ -12,7 +12,7 @@
             width="300"
         />
         <img
-            src="https://cdn.britannica.com/75/5275-050-A960A3E8/thunderbolt-Zeus-statuette-Dodona-Greece-National-Museums.jpg"
+            src="https://miro.medium.com/v2/resize:fit:1400/1*do0YAp2ICH2BVcJOPJNAhQ.png"
             alt="Zeus PP"
             width="300"
         />
